Update Mange Barrister event code